# HydraViewer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg.json  viewport.h  viewport.mm  xmake.lua
app/: CMakeLists.txt  main.cpp  windows.cpp  windows.h
common/: CMakeLists.txt  filesystem.cpp  filesystem.h  helpers.h  logging.cpp  logging.h  timer.cpp  timer.h  utils.cpp  utils.h
editor/: CMakeLists.txt  camera.cpp  camera.h  common.cpp  common.h  render_settings.cpp  render_settings.h  stage_tree.cpp  stage_tree.h  stage_view.cpp  stage_view.h  style.qss  swapchain.cpp  swapchain.h  swapchain_layer.mm  viewport.h  windows.cpp  windows.h
editor/fonts/: LICENSE.md
editor/model/: custom_attributes.h  data_model.cpp  data_model.h  free_camera.cpp  free_camera.h  root_data_model.cpp  root_data_model.h  selection_data_model.cpp  selection_data_model.h  view_settings_data_model.cpp  view_settings_data_model.h
editor/node/: graph_model.cpp  graph_model.h
editor/panels/: stage_tree.cpp  stage_tree.h  view_settings_view.cpp  view_settings_view.h
editor/viewport/: camera.cpp  camera.h  swapchain.cpp  swapchain.h  viewport.h  viewport.mm
shaders/: usd_blit.metal
src/: main.mm
src/gui/: imgui_impl_glfw.h
tests/: CMakeLists.txt  main.cpp  test_benchmark.cpp  test_benchmark.h  test_gui.cpp  test_gui.h  test_qstring.cpp  test_qstring.h
viewport/: CMakeLists.txt  camera.cpp  camera.h  common.cpp  common.h  custom_attributes.cpp  custom_attributes.h  framerate.cpp  framerate.h  free_camera.cpp  free_camera.h  root_data_model.cpp  root_data_model.h  selection_data_model.cpp  selection_data_model.h  settings.cpp  settings.h  stage_view.cpp  stage_view.h  swapchain.cpp  swapchain.h  swapchain_layer.mm  view_settings_data_model.cpp  view_settings_data_model.h  viewport.h  viewport.mm
