#  Copyright (c) 2024 Feng Yang
#
#  I am making my contributions/submissions to this project solely in my
#  personal capacity and am not conveying any rights to any intellectual
#  property of any third parties.

cmake_minimum_required(VERSION 3.10)
project(HydraViewer)

add_executable(${PROJECT_NAME}
        main.cpp
        windows.cpp
        windows.h
)

target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ../)

set(PXR_LIBRARY_NAMES)
foreach (_item ${PXR_LIBRARIES}) # Iterate over list of absolute paths
    get_filename_component(_t ${_item} NAME)
    list(APPEND PXR_LIBRARY_NAMES ${_t})
endforeach ()

target_link_libraries(${PROJECT_NAME}
        Qt::Core
        Qt::Widgets
        fmt::fmt
        metal-cpp
        common
        viewport
        ${PXR_LIBRARY_NAMES}
)